--- a/lanceur.html
+++ b/lanceur.html
@@ -22,15 +22,16 @@
     </header>
     <section class="hero">
         <h2>Hurican</h2>
-        <p>Votre partenaire de confiance pour des solutions sur mesure.</p>
-        <a href="#" class="cta-button">En savoir plus</a>
+        <p>Une equipe hors du commun avec des as de la cachette!</p>
+        <a href="plus.html" class="cta-button">En savoir plus</a>
     </section>
     <section class="about">
-        <h3>À propos de nous</h3>
-        <p>Nous offrons des services de haute qualité pour répondre à vos besoins. Nos experts sont prêts à travailler avec vous pour développer des solutions adaptées.</p>
+        <h3>Présentation de nos lanceur de Paintball</h3>
+        <h5>voici qu'elleque une d'entre elle </h5>
+        
     </section>
     <footer>
-        <p>&copy; 2024 Mon Entreprise - Tous droits réservés</p>
+        <p>&copy; 2024 Hurican - Tous droits réservés</p>
     </footer>
 </body>
 </html>
