--- a/plus.html
+++ b/plus.html
@@ -1,13 +1,107 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>un peut plus </title>
+    <title>Lanceur Paintball</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <link href="css/styles.css" rel="stylesheet" />
     <link href="stylesheet" rel="styles.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <h1>Mon Equipe et nos lanceur </h1>
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="equipe.html">Equipe</a></li>
+                <li><a href="equipement.html">Equipement</a></li>
+                <li><a href="plus.html">voir plus</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="hero">
+        <h2>Hurican</h2>
+        <p>Une equipe hors du commun avec des as de la cachette!</p>
+        <a href="plus.html" class="cta-button">En savoir plus</a>
+    </section>
+    <section class="about">
+        <h3>Présentation de notre Équipe de Paintball</h3>
+        <h5>voici qu'elle que membre de notre équipe</h5>
+        <p>
+                <p> 
+                    Notre Équipe de Guerriers de Peinture
+                    Bienvenue dans l'univers de notre équipe, une bande de passionnés de paintball prêts à relever tous les défis ! Chaque membre apporte un talent unique et une énergie sans fin sur le terrain. Découvrez nos joueurs :
+                </p> 
+                ---
+                <p>
+                    ### **Arnaud "Le Stratège"**
+                    Arnaud est notre maître tacticien. Toujours à l'affût des moindres détails, il élabore des stratégies pour prendre l'avantage sur nos adversaires. Son sens de l’anticipation et sa vision du jeu font de lui un joueur redoutable. Avec Arnaud, chaque partie est une victoire en puissance !
+                </p>
+                ---
+                <p>
+                    ### **Ryan "L’Assassin Silencieuse"**
+                    Ryan  est le roi de la discrétion et de la précision. On le surnomme l’Assassin Silencieuse car il se déplace sans bruit élimine a la main et frappe avec une précision incroyable. Spécialiste des éliminations surprises, il est l’atout caché de l’équipe.
+                </p>
+                ---
+                <p>
+                    ### **Florian "Le Défenseur"**
+                    Florian est notre bouclier humain. Toujours en première ligne pour protéger l'équipe, il sait encaisser les tirs et bloquer les adversaires. Son endurance et son courage nous permettent de garder l’avantage, et il inspire confiance à tous.
+                </p>
+                ---
+                <p>
+                    ### **Thierry "La Tornade"**
+                    Thierry ne tient jamais en place ! Avec son énergie débordante et sa rapidité, il désoriente les adversaires et fonce dans les lignes ennemies. La Tornade est une force explosive sur le terrain, imprévisible et intrépide.
+                </p>
+                ---
+                <p>
+                    ### **Franck "L’Éclaireur"**
+                    Alex est notre spécialiste de la reconnaissance. Agile et doté d’une excellente vue, il repère les positions ennemies et signale les dangers. Son rôle est essentiel pour préparer nos offensives et éviter les pièges sur le terrain.
+                </p>
+                ---
+                <p>
+                    ### **Gregory "Le Caméléon"**
+                    Jules est le roi du camouflage. Grâce à ses compétences en infiltration et à sa capacité à se fondre dans l’environnement, il reste indétectable jusqu’au moment parfait pour attaquer. Ses capacités surprennent toujours l’équipe adverse, qui le découvre souvent… trop tard.
+                </p>
+                ---
+                <p>
+                    ### **William "Le Sniper"**
+                    Doté d’une précision infaillible, William est le sniper de l’équipe. Il reste à l’arrière et élimine les adversaires à distance avec calme et efficacité. Lorsqu’il vise, peu peuvent échapper à son tir précis et silencieux.
+                </p>
+                ---
+                <p>
+                    ### **Liam "La Verrue"**
+                    Liam, affectueusement surnommé "La Verrue", est notre mascotte involontaire. Toujours là, mais pas toujours au bon endroit, il a un don pour se retrouver en mauvaise posture et attirer les tirs… même ceux de ses coéquipiers ! Bien qu’il soit, disons… le maillon faible de l’équipe, Sa maladresse légendaire est même devenue une sorte de "tactique" : parfois, son imprévisibilité désoriente suffisamment l’équipe adverse pour que nous en tirions parti !
+
+                    Malgré tout, **Liam est un atout à sa façon**, apportant des éclats de rire et des histoires mémorables à chaque partie. Car au fond, une équipe sans un "Liam" ne serait pas vraiment une équipe !
+                </p>
+                ---
+                <p>
+                    Christophe "Le Bof"
+                    Christophe, alias "cricri" est reconnaissable à des kilomètres avec son attitude relax clope au bec et binouse a la main. Toujours en train de parler de ses exploits (qu'on n'a jamais vraiment vu), il débarque au terrain de paintball en survêt, parfois même en claquettes, convaincu que l'équipement c'est pour les faibles. Son approche ? "Pas besoin de stratégie, juste foncer !"
+                </p>
+                ---
+                <p>
+                    Sacha "Le Joueur Solide"
+                    Sacha est le gars fiable de l'équipe. Pas de coups d'éclat ni de stratégies trop ambitieuses : il est là pour jouer sérieusement et faire son job. Sacha connaît bien les bases et reste concentré pendant toute la fête, sans jamais se laisser déranger par le chaos autour de lui
+                </p>
+                ---
+                <p>
+                    Sébastien "Le Pro"
+                    Sébastien est l'as de l'équipe, le joueur redouté par nos adversaires et admiré par ses coéquipiers. Précis, rapide, et doté d'un instinct impressionnant pour anticiper les mouvements de l'équipe adverse, il s'adapte à chaque situation avec facilité. Quand Sébastien est sur le terrain, on sait que l'équipe a un sérieux avantage.
+                </p>
+                ---
+                <p>
+                Avec cette équipe, chaque partie est une aventure ! Que ce soit par leur habileté, leur soutien ou leur stratégie, chacun des membres contribue au succès collectif et rend l'expérience inoubliable pour tous.
+                ---
+                </p>
+
+                Notre équipe de paintball est unie par la passion du jeu, l’envie de s'améliorer ensemble et l'amour de l’adrénaline. Chaque membre, avec son style et ses forces, contribue à notre succès sur le terrain. Prêts pour une partie inoubliable ?
+
+        </p>
+    </section>
+    <footer>
+        <p>&copy; 2024 Mon Entreprise - Tous droits réservés</p>
+    </footer>
 </body>
 </html>
