--- a/lanceur.html
+++ b/lanceur.html
@@ -28,6 +28,13 @@
     <section class="about">
         <h3>Présentation de nos lanceur de Paintball</h3>
         <h5>voici qu'elleque une d'entre elle </h5>
+
+        <img src="">
+        <img src="">
+        <img src="">
+        <img src="">
+        <img src="">
+        <img src="">
         
     </section>
     <footer>
