ca commence a se finir

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Sale Item</h5>
+                                    <h5 class="fw-bolder">Nouveaux arrivant</h5>
                                     <!-- Product price-->
                                     <span class="text-muted text-decoration-line-through"><h5>seul</h5></span>
                                     <p>avec ses potes</p>
@@ -146,8 +146,7 @@
                                         <div class="bi-star-fill"></div>
                                         <div class="bi-star-fill"></div>
                                         <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
+                                        
                                     </div>
                                     <!-- Product price-->
                                     $40.00
@@ -235,12 +234,12 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                            <img class="card-img-top" src="https://imgur.com/wtVCkOJ.jpg" alt="trio alm" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Popular Item</h5>
+                                    <h5 class="fw-bolder">Le trio Legendaire</h5>
                                     <!-- Product reviews-->
                                     <div class="d-flex justify-content-center small text-warning mb-2">
                                         <div class="bi-star-fill"></div>
@@ -249,8 +248,9 @@
                                         <div class="bi-star-fill"></div>
                                         <div class="bi-star-fill"></div>
                                     </div>
-                                    <!-- Product price-->
-                                    $40.00
+                                    <p>L’Assassin </p>
+                                    <p>L’Éclaireur</p>
+                                    <p>Le Caméléon</p>
                                 </div>
                             </div>
                             <!-- Product actions-->
