--- a/lanceur.html
+++ b/lanceur.html
@@ -123,17 +123,13 @@
                     </div>
                     <div class="col mb-5">
                         <div class="card h-100">
-                            <!-- Product image-->
-                            <img class="card-img-top" src=".jpg" alt="SMART lanceur " />
-                            <!-- Product details-->
+                            <img class="card-img-top" src="https://imgur.com/uGPLSXI.jpg" alt="SMART lanceur " />
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <!-- Product name-->
                                     <h5 class="fw-bolder">Franck nº2</h5>
                                     SMART PARTS NERVE - BLEU BRILLANT
                                 </div>
                             </div>
-                            <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://www.paintballgarage.com/paintballgaragelanceurdoccasionsmartpartsnervebleubrillant-xml-588_444-2369.html">voir plus ici</a></div>
                             </div>
@@ -141,63 +137,37 @@
                     </div>
                     <div class="col mb-5">
                         <div class="card h-100">
-                            <!-- Sale badge-->
-                            <div class="badge bg-dark text-whit position-absolute" style="top: 0.5rem; right: 0.5rem">teams</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/Mn00fLH.jpg" alt="teams" />
+                            <img class="card-img-top" src="https://imgur.com/i0hO31F.jpg" alt="teams" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Special teams</h5>
-                                    <!-- Product reviews-->
-                                    <div class="d-flex justify-content-center small text-warning mb-2">
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                    </div>
-                                    <!-- Product price-->
-                                    <span class="text-muted text-decoration-line-through">pas mal</span>
-                                    <p>La meilleur</p>
+                                    <h5 class="fw-bolder">Ryan</h5>
+                                    <p>Shoker RSX </p>
                                 </div>
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">voir plus ici</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://www.paintball-connexion.com/lanceurs-electro-pneumatiques/13037-lanceur-shocker-era-gog-cal68.html#/couleur-noir">voir plus ici</a></div>
                             </div>
                         </div>
                     </div>
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/wtVCkOJ.jpg" alt="trio alm" />
+                            <img class="card-img-top" src="https://imgur.com/FCPw4IL.jpg" alt="trio alm" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Le trio Legendaire</h5>
-                                    <!-- Product reviews-->
-                                    <div class="d-flex justify-content-center small text-warning mb-2">
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                    </div>
-                                    <p>L’Assassin </p>
-                                    <p>L’Éclaireur</p>
-                                    <p>Le Caméléon</p>
+                                    <h5 class="fw-bolder">Florian</h5>
+                                    <p>Shoker XLS </p>
                                 </div>
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">voir plus ici</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://www.lonewolfpaintball.com/products/sp-shocker-xls">voir plus ici</a></div>
                             </div>
                         </div>
                     </div>
