--- a/index.html
+++ b/index.html
@@ -29,26 +29,9 @@
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipe.html">Equipe</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="cv.html">CV <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c3/Flag_of_France.svg/255px-Flag_of_France.svg.png" alt="Français" width="25"></a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="cvEn.html">CV <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Flag_of_the_United_Kingdom_%281-2%29.svg" alt="English" width="30"></a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">#</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">#</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">A propos</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#!">Galeri</a></li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                                <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <form class="d-flex">
-                        <button class="btn btn-outline-dark" type="submit">
-                            <i class="bi-cart-fill me-1"></i>
-                            Cart
-                            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                        </button>
-                    </form>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="plus.html">plus</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">#</a></li>            
+                       </ul>                    
                 </div>
             </div>
         </nav>
