--- a/cv.html
+++ b/cv.html
@@ -1,11 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -14,10 +7,30 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
+<!-- Navigation-->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container px-4 px-lg-5">
+        <a class="navbar-brand" href="index.html">Ryan Almansa</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">accueil</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="lanceur.html">Lanceur</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipement.html">Equipement</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipe.html">Equipe</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="cv.html">CV <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c3/Flag_of_France.svg/255px-Flag_of_France.svg.png" alt="Français" width="25"></a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="cvEn.html">CV <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Flag_of_the_United_Kingdom_%281-2%29.svg" alt="English" width="30"></a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="plus.html">plus</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">#</a></li>            
+               </ul>                    
+        </div>
+    </div>
+</nav>
+
 <body>
     <div class="container">
         <div class="header">
-            <img src="moidh.png" alt="Ryan Almansa" class="profile-pic">
+            <img src="https://imgur.com/6GKW28E.png" alt="Ryan Almansa" class="profile-pic">
             <h1>Ryan Almansa</h1>
             <p>18 years old | BTS CIEL (Cybersecurity, IT and Software Environment)</p>
         </div>
